# dummy

./: README.md  pyproject.toml  report.md
src/dummy/: crew.py  main.py
src/dummy/config/: agents.yaml  tasks.yaml
